fix: fixed dropdown visibility issues with small file-explorer

--- a/src/app/files/file-explorer/file-explorer.component.scss
+++ b/src/app/files/file-explorer/file-explorer.component.scss
@@ -1,6 +1,7 @@
 :host {
   display: flex;
   flex-direction: column;
+  height: 100%;
   max-height: 65vh;
   overflow: auto;
   -webkit-touch-callout: none;
